main photo stop stretching

--- a/_sass/_segment.scss
+++ b/_sass/_segment.scss
@@ -22,7 +22,6 @@
 
     img {
        width: 70%;  
-       height: 500px;
        clear: left;
        opacity: 0.8;
 
